--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
   "name": "mindscreen/fal_upload",
   "type": "typo3-cms-extension",
-  "description": "Handling file uploads via Extbase inspired by fal_upload of helhum",
+  "description": "Handling file uploads via Extbase, inspired by upload_example of helhum",
   "homepage": "https://github.com/mindscreen/t3ext-fal_upload",
   "license": [
     "GPL-2.0+"
   ],
-  "version": "0.1.0",
+  "version": "0.1.1",
   "require": {
-    "typo3/cms-core": ">=6.2.4,<9.0"
+    "typo3/cms-core": ">=7.5.0,<9.0"
   },
   "autoload": {
     "psr-4": {
